--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "lite": "lite-server",
         "scss": "node-sass -o css/ scss/",
-        "watch:scss": "onchange \"scss/\" -- npm run scss",
+        "watch:scss": "onchange \"scss/*.scss\" -- npm run scss",
         "watch:all": "parallelshell \"npm run watch:scss\" \"npm run lite\""
     },
     "repository": {
