--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
         "lite": "lite-server",
         "scss": "node-sass -o css/ scss/",
         "watch:scss": "onchange \"scss/*.scss\" -- npm run scss",
-        "watch:all": "parallelshell \"npm run watch:scss\" \"npm run lite\""
+        "watch:all": "parallelshell \"npm run watch:scss\" \"npm run lite\"",
+        "clean": "rimraf dist",
+        "copyfonts": "copyfiles -f node_modules/font-awesome/fonts/* dist/fonts",
+        "imagemin": "imagemin img/* -o dist/img",
+        "usemin": "usemin index.html -d dist --htmlmin -o dist/index.html",
+        "build": "npm run clean && npm run usemin"
     },
     "repository": {
         "type": "git",
@@ -25,6 +30,10 @@
         "lite-server": "^2.5.4",
         "node-sass": "^4.12.0",
         "onchange": "^6.1.0",
-        "parallelshell": "^3.0.2"
+        "parallelshell": "^3.0.2",
+        "rimraf": "^3.0.0"
+    },
+    "dependencies": {
+        "usemin": "^0.5.0"
     }
 }
